--- a/directions/index.html
+++ b/directions/index.html
@@ -20,7 +20,7 @@
             <span class="title1">Sujith's</span><span class="title2">Lab Webinar</span> <span class="year">2021</span>
         </div>
         <div class="bottom-right">
-            2021 <br> Indian Institute of Technology Madras, and City Maybe
+            2021 <br> Indian Institute of Technology Madras
         </div>
     </div>
 
@@ -64,7 +64,7 @@
     <table class="footer">
         <tr>
             <td class="footer">Design by <a target="_blank" href="http://math.ucr.edu/~mpierce/">Mike Pierce</a></td> 
-            <td class="footer">&copy; Conference Organizers</td> 
+            <td class="footer">&copy; Webinar Organizers</td> 
         </tr>
     </table>
 
