--- a/flyer/index.html
+++ b/flyer/index.html
@@ -17,29 +17,29 @@
     <div class="banner">
         <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
+            <span class="title1">Sujith's</span><span class="title2">Lab Webinar</span> <span class="year">2021</span>
         </div>
         <div class="bottom-right">
-            June 31, 2525 <br> University Name, and City Maybe
+            2021 <br> Indian Institute of Technology, Madras
         </div>
     </div>
 
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Conference Home Page" href=".">Home</a>
+                <a title="Webinar Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
-                <a title="Register for the Conference" href="registration">Registration</a>
+                <a title="Register for the Webinar" href="registration">Registration</a>
             </td>
             <td class="navigation">
-                <a title="Conference Program" href="program">Program</a> 
+                <a title="Webinar Program" href="program">Program</a> 
             </td>
             <td class="navigation">
-                <a title="Directions to the Conference" href="directions">Directions</a>
+                <a title="Directions to attend Webinar" href="directions">Directions</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Conference Flyer" href="flyer">Flyer</a>
+                <a class="current" title="Webinar Flyer" href="flyer">Flyer</a>
             </td>
         </tr>
     </table>
