--- a/directions/index.html
+++ b/directions/index.html
@@ -63,7 +63,7 @@
 
     <table class="footer">
         <tr>
-            <td class="footer">Design by <a target="_blank" href="http://math.ucr.edu/~mpierce/">Mike Pierce</a></td> 
+            <td class="footer">Design by <a target="_blank" href="http://math.ucr.edu/~mpierce/">Ankit Sahay</a></td> 
             <td class="footer">&copy; Webinar Organizers</td> 
         </tr>
     </table>
