--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Conference Template</title>
+    <title>Sujith's Lab Webinar</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
             <span class="title1">Sujith's</span><span class="title2">Lab Webinar</span> <span class="year">2021</span>
         </div>
         <div class="bottom-right">
-            2021 <br> Indian Institute of Technology, Madras
+            2021 <br> Indian Institute of Technology Madras
         </div>
     </div>
 
