--- a/program/index.html
+++ b/program/index.html
@@ -12,7 +12,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Program | Conference Template</title>
+    <title>Program | Sujith's Lab Webinar</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
             <span class="title1">Sujith's</span><span class="title2">Lab Webinar</span> <span class="year">2021</span>
         </div>
         <div class="bottom-right">
-            2021 <br> Indian Institute of Technology, Madras
+            2021 <br> Indian Institute of Technology Madras
         </div>
     </div>
 
