--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Conference Template Banner">
+        <img src="assets/833070-uqmsbupogi-1490711653.jpg" alt="Conference Template Banner">
         <div class="top-left">
             <span class="title1">Sujith's</span><span class="title2">Lab Webinar</span> <span class="year">2021</span>
         </div>
@@ -93,7 +93,7 @@
 
     <table class="footer">
         <tr>
-            <td class="footer">Design by <a target="_blank" href="http://math.ucr.edu/~mpierce/">Ankit Sahay</a></td> 
+            <td class="footer">Design by <a target="_blank" href="https://ankitsahay02.com/">Ankit Sahay</a></td> 
             <td class="footer">&copy; Webinar Organizers</td> 
         </tr>
     </table>
