--- a/flyer/index.html
+++ b/flyer/index.html
@@ -70,7 +70,7 @@
 
     <table class="footer">
         <tr>
-            <td class="footer">Design by <a target="_blank" href="http://math.ucr.edu/~mpierce/">Ankit Sahay</a></td> 
+            <td class="footer">Design by <a target="_blank" href="https://ankitsahay02.com/">Ankit Sahay</a></td> 
             <td class="footer">&copy; Webinar Organizers</td> 
         </tr>
     </table>
