--- a/directions/index.html
+++ b/directions/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="banner">
-        <img src="assets/833070-uqmsbupogi-1490711653.jpg" alt="Conference Template Banner">
+        <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="top-left">
             <span class="title1">Sujith's</span><span class="title2">Lab Webinar</span> <span class="year">2021</span>
         </div>
